--- a/src/test/java/ApplicationResources.properties
+++ b/src/test/java/ApplicationResources.properties
@@ -1,4 +1,4 @@
-browser.name=firefox
+browser.name=chrome
 application.url=http://34.198.120.187:9090/um/#/login
 step.definition.path=com.sci.testamigo.usermanagement.stepdef
 feature.path=target/generated-test-sources/cucumber/
